# fastapi-uv-playground

./: Dockerfile  README.md  hello.py  pyproject.toml
.github/workflows/: pipeline.yaml
app/: main.py
app/api/: endpoints.py
app/schemas/: datetime_schema.py
app/services/: datetime_service.py
app/settings/: settings.py
docs/: notes.md  run_application.md
tests/: conftest.py  test_datetime_services.py
